--- a/index.html
+++ b/index.html
@@ -16,11 +16,29 @@
     <title>Document</title>
   </head>
   <body>
-    Learn to code by watching others See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable. Try it free
-    7 days then $20/mo. thereafter First Name Last Name Email Address Password Claim your free trial By clicking the button, you are agreeing to our Terms and Services
+    <main>
+      <section class="intro">
+        <div class="intro__text">
+          <h1 class="intro__title">Learn to code by watching others</h1>
+          <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+        </div>
 
-    <footer>
-      <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</p>
-    </footer>
+        <div class="form-container">
+          <div class="callout--purple intro__callout">
+            <p>Try it free 7 days then $20/mo. thereafter</p>
+          </div>
+
+          <fieldset class="intro__form">
+            <input type="text" placeholder="First Name" />
+            <input type="text" placeholder="Last Name" />
+            <input type="email" placeholder="Email Address" />
+            <input type="password" />
+            <input type="submit" />
+          </fieldset>
+          <p class="intro__disclaimer small-text"></p>
+          First Name Last Name Email Address Password Claim your free trial By clicking the button, you are agreeing to our <a href="#">Terms and Services</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
