--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <p>Try it free 7 days then $20/mo. thereafter</p>
           </div>
 
-          <fieldset class="intro__form">
+          <form class="intro__form">
             <input type="text" placeholder="First Name" />
             <input type="text" placeholder="Last Name" />
             <input type="email" placeholder="Email Address" />
             <input type="password" />
             <input type="submit" />
-          </fieldset>
+          </form>
           <p class="intro__disclaimer small-text"></p>
           First Name Last Name Email Address Password Claim your free trial By clicking the button, you are agreeing to our <a href="#">Terms and Services</a>
         </div>
