--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-container">
-          <div class="callout--purple intro__callout">
+          <div class="alert--purple intro__alert">
             <p>Try it free 7 days then $20/mo. thereafter</p>
           </div>
 
