--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
         </div>
 
         <div class="form-container">
-          <div class="alert--purple intro__alert">
+          <div class="box--blue intro__alert">
             <p>Try it free 7 days then $20/mo. thereafter</p>
           </div>
 
-          <form class="intro__form">
+          <form class="intro__form box--white">
             <input type="text" placeholder="First Name" />
             <input type="text" placeholder="Last Name" />
             <input type="email" placeholder="Email Address" />
-            <input type="password" />
-            <input type="submit" />
+            <input type="password" placeholder="Password" />
+            <input type="submit" class="button--green" />
           </form>
-          <p class="intro__disclaimer small-text"></p>
-          First Name Last Name Email Address Password Claim your free trial By clicking the button, you are agreeing to our <a href="#">Terms and Services</a>
+          <p class="intro__disclaimer small-text">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
         </div>
       </section>
     </main>
