--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="form-container">
           <div class="box--blue intro__alert">
-            <p>Try it free 7 days then $20/mo. thereafter</p>
+            <p><b>Try it free 7 days</b> then $20/mo. thereafter</p>
           </div>
 
           <form class="intro__form box--white">
@@ -33,9 +33,9 @@
             <input type="text" placeholder="Last Name" />
             <input type="email" placeholder="Email Address" />
             <input type="password" placeholder="Password" />
-            <input type="submit" class="button--green" />
+            <button class="button--green intro__button">Claim your free trial</button>
+            <p class="intro__disclaimer small-text">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
           </form>
-          <p class="intro__disclaimer small-text">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
         </div>
       </section>
     </main>
