little fixes on form
added transition, novalidate and improve how the border on the error state is visualized

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p><b>Try it free 7 days</b> then $20/mo. thereafter</p>
           </div>
 
-          <form class="intro__form box--white" action="success.html" method="get">
+          <form class="intro__form box--white" action="success.html" method="get" novalidate>
             <div class="intro__input-container">
               <input type="text" placeholder="First Name" class="intro__input" required />
               <small aria-hidden="true" class="error-message">First Name cannot be empty</small>
