--- a/index.html
+++ b/index.html
@@ -51,5 +51,7 @@
         </div>
       </section>
     </main>
+    <!-- ========================== § SCRIPTS === -->
+    <script src="js/script.js"></script>
   </body>
 </html>
