working on checkValidity

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
               <small aria-hidden="true" class="error-message">Last Name cannot be empty</small>
             </div>
             <div class="intro__input-container">
-              <input type="email" placeholder="Email Address" class="intro__input" />
+              <input type="email" placeholder="Email Address" class="intro__input" required />
               <small aria-hidden="true" class="error-message">Looks like this is not an email</small>
             </div>
             <div class="intro__input-container">
-              <input type="password" placeholder="Password" class="intro__input" />
+              <input type="password" placeholder="Password" class="intro__input" required />
               <small aria-hidden="true" class="error-message">Password cannot be empty</small>
             </div>
-            <button class="button--green intro__button">Claim your free trial</button>
+            <button id="intro__button" class="button--green intro__button">Claim your free trial</button>
             <small class="intro__disclaimer">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
           </form>
         </div>
