--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
-    <title>Document</title>
+    <title>Success!!!</title>
   </head>
   <body id="success">
     <main>
