add # to src img

--- a/success.html
+++ b/success.html
@@ -17,7 +17,7 @@
   </head>
   <body id="success">
     <main>
-      <figure class="success-img-container"><img id="success-img" src="" alt="Random gif of someone celebrating." /></figure>
+      <figure class="success-img-container"><img id="success-img" src="#" alt="Random gif of someone celebrating." /></figure>
       <h1 class="success__title">Success!</h1>
       <a href="index.html">Go back to the form page</a>
     </main>
